Fix bad DCHECK when reading DNS config

The original version of this DCHECK missed a case. It's possible for
SetDnsClient() to run after NetworkChangeNotifier::SetInitialDnsConfig()
but before the task it posts to DNSObservers. When that happens,
DnsClient will already have a valid DnsConfig by the time
UpdateDNSConfig() runs. NetworkChangeNotifier's DNSConfig can't have
changed again since then because there are too many PostTasks in the
way.

Bug: 779144
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I9acafc463b9ee9dbcc7c7c08da32d1d86901f105
Reviewed-on: https://chromium-review.googlesource.com/747503
Reviewed-by: Julia Tuttle <juliatuttle@chromium.org>
Commit-Queue: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512940}
Former-commit-id: 668e8441703bde5dd5ab92ce7446898c709509fc